# transaction/src/main/java/com/atm/atmserver/service/TransactionService.java
@@ -6,5 +6,5 @@ public interface TransactionService {
     WithdrawResponse withdraw(WithdrawRequest request);
     DepositResponse deposit(DepositRequest request);
     TransferResponse transfer(TransferRequest request);
-    TransactionResponse getTransactionById(Long transactionId);
+    TransactionResponse getTransactionById(String transactionId);
 }
